[package]
name = "pwd-dioxus"
version = "0.2.9"
edition = "2024"
description = "Reusable Dioxus components for password handling UI"
license = "MIT"
repository = "https://github.com/LucioPg/pwd-dioxus"
readme = "README.md"
keywords = ["dioxus", "password", "ui", "components", "form"]
categories = ["gui", "authentication"]

[dependencies]
dioxus = { version = "0.7", optional = true }
secrecy = { version = "0.10", optional = true }
pwd-types = { git = "https://github.com/LucioPg/pwd-types", features = ["secrecy"], optional = true }
tokio = { version = "1", features = ["sync", "time"], optional = true }
tokio-util = { version = "0.7", optional = true }
arboard = { version = "3.4", optional = true }

[features]
default = []

# === ATOMICI ===
icons = ["dep:dioxus"]
icons-visibility = ["dep:dioxus"]
icons-action = ["dep:dioxus"]
icons-alert = ["dep:dioxus"]
spinner = ["dep:dioxus"]
modal = ["dep:dioxus"]
toggle = ["dep:dioxus"]

# === COMPOSITI ===
form = ["icons-visibility", "dep:secrecy", "dep:dioxus"]
secret-display = ["form", "icons-visibility", "icons-action", "dep:arboard"]
analyzer = ["spinner", "dep:pwd-types"]
handler = ["form", "analyzer", "icons-action", "dep:secrecy", "dep:tokio", "dep:tokio-util"]
toast = ["dep:dioxus", "dep:tokio"]

# === CONVENIENCE ===
full = ["icons", "spinner", "modal", "handler", "toast", "toggle"]
